src/test/results/deca/codegen/invalid/SansObjet/Stack-OV100000.res
ERROR: Stack overflow , a real one
